# shielded-x402

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  PRD.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  sepolia-canary.yml
chains/base/: README.md
chains/solana/: README.md
chains/solana/programs/x402_gateway/: Cargo.toml
chains/solana/programs/x402_gateway/src/: lib.rs
circuits/spend_change/: Nargo.toml  Prover.toml  README.md
contracts/: foundry.toml
contracts/src/: CommitmentRegistryV1.sol  CreditChannelSettlement.sol  ShieldedPool.sol
contracts/test/: CommitmentRegistryV1.t.sol  CreditChannelSettlement.t.sol  DummyShieldedService.t.sol  ShieldedPool.t.sol  ShieldedPoolWithdraw.t.sol
docs/: agents-guide.md  architecture.md  crypto-spec.md  multi-chain-credit-mvp.md  publish-npm.md  quickstart.md  relayer-architecture.md  roadmap.md  sdk.md  testing-playbook.md  x402-protocol.md
examples/agent-to-agent-relayed/: .env.example  README.md  find-payable-agent.mjs  package-lock.json  package.json  seed-note.mjs  test-agent-payment.mjs  wallet-state.json
examples/demo-api/: package.json
examples/multi-chain-base-solana/: README.md  package.json  (+1 more)
ops/: deploy-anvil-dummy.sh  deploy-sepolia-dummy-service.sh  deploy-sepolia.sh  e2e-anvil.sh  toolchain.md
scripts/: build-payment-fixture.mjs  circuit-check.sh  dev-multichain-stack.sh  doctor.sh  generate-noir-verifier.sh  generate-proof-fixture.sh  publish-packages.sh  setup-foundry-deps.sh  tuple-output-to-public-inputs.mjs
(+151 files in other folders)
